# VoltaIQ

./: .env.example  .gitignore  README.md  deleted_code.py  main.py  pyproject.toml  requirements.txt  run.py  world.docx  ~$world.docx
app/: main.py  middleware.py
app/agent/: __init__.py  fleet_advisor.py  graph.py  state.py  tools.py
app/api/: battery.py  carbon.py  chat.py  dependencies.py  fleet.py  models_router.py  router.py  system.py
app/config/: config.py
app/database/: session.py
app/models/: __init__.py  battery_models.py  fleet_models.py  leakage_analysis.py  models.py
app/schemas/: __init__.py  payloads.py
app/services/: __init__.py  carbon_service.py  models_service.py
app/utils/: __init__.py  cleaning.py  data_loader.py  feature_engineering.py  profiling.py  relationships.py  validation.py
datasets/battery/: ev_battery_degradation.csv
datasets/charging/: ev_charging_sessions.csv  ev_charging_station_data.csv
datasets/fleet/: fleet_route_data.csv
docs/: MODEL_REGISTRY.md  dataset_relationships.md  ml_architecture.md  openapi.json  task.md  walkthrough.md
experiments/: experiment_registry.json
frontend/: dashboard.py
frontend/pages/: Fleet.py  (+3 more)
notebooks/: 01_Data_Loading.ipynb  02_Data_Validation.ipynb  03_Data_Cleaning.ipynb  04_Feature_Preparation.ipynb  05_Battery_SOH_Model.py  06_Battery_RUL_Model.py  07_Fleet_Readiness_Model.py
reports/: data_quality_report.md
scripts/: generate_openapi.py  train_all_models.py  verify_models.py
tests/: test_agent.py  test_api.py  test_charging_proximity.py  test_data.py  test_models.py
(+23 files in other folders)
