[project]
name = "voltiq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "folium>=0.20.0",
    "geopandas>=1.1.4",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
    "matplotlib>=3.11.0",
    "notebook>=7.6.0",
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "sqlite-utils>=4.1.1",
    "streamlit>=1.59.2",
    "streamlit-folium>=0.27.2",
    "tqdm>=4.68.4",
    "uvicorn>=0.51.0",
]
